# aria

./: README.md  pyproject.toml
aria/: utils.py
aria/inference/: model_mlx.py
aria/training/: train.py
